--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -51,17 +51,23 @@ header ul li {
     list-style: none;
     font-size: 22px;
     text-align: center;
+    display: none;
 }
 
 .log-bar {
     position: absolute;
     right: 50px;
     top: 25px;
-    display: flex;
 }
 
 #logout {
     display: none;
+}
+
+#info {
+    display: none;
+    text-align: center;
+    font-size: 22px;
 }
 
 main {
@@ -81,4 +87,60 @@ footer {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 24px;
     background-color: rgb(150, 228, 228);
+}
+
+
+/* content */
+
+
+form {
+    border: 3px solid #f1f1f1;
+}
+  
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+button {
+    background-color: #04AA6D;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
+.cancelbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336;
+}
+
+.imgcontainer {
+    text-align: center;
+    margin: 24px 0 12px 0;
+}
+
+img.avatar {
+    width: 40%;
+    border-radius: 50%;
+}
+
+.container {
+    padding: 16px;
+}
+
+span.psw {
+    float: right;
+    padding-top: 16px;
 }
