--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -71,6 +71,8 @@ header ul li {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: bold;
     font-size: 22px;
+    margin-top: 10px;
+    /* margin-bottom: 5px; */
 }
 
 main {
@@ -202,7 +204,7 @@ input[type=checkbox] {
 .registration-container {
     width: 45%;
     margin: 0px auto;
-    margin-top: 135px;
+    margin-top: 125px;
     padding: 20px;
     border: 3px solid #f1f1f1;
     transition: ease all .3s;
@@ -315,4 +317,115 @@ input[type=checkbox] {
     margin-top: 2px;
     padding: 3px;
     box-shadow: 0px 0px 10px 3px lightgray;
+}
+
+
+/* shoe form */
+
+
+.shoe-container {
+    width: 50%;
+    margin: 150px auto;
+    border: 1px solid lightgray;
+    border-radius: 10px;
+    overflow: hidden;
+    padding: 55px 55px 37px 55px;
+    background: #9152f8;
+    background: -webkit-linear-gradient(top, #7579ff, #b224ef);
+    background: -o-linear-gradient(top, #7579ff, #b224ef);
+    background: -moz-linear-gradient(top, #7579ff, #b224ef);
+    background: linear-gradient(top, #7579ff, #b224ef);
+}
+
+.mid-content {
+    width: 100%;
+}
+
+.container-title {
+    padding-bottom: 40px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: medium;
+    font-size: 30px;
+    color: #fff;
+    line-height: 1.2;
+    text-align: center;
+    text-transform: uppercase;
+    display: block;
+}
+
+.validate-input {
+    position: relative;
+}
+
+.wrap-input100 {
+    width: 100%;
+    position: relative;
+    border-bottom: 2px solid rgba(255,255,255,0.24);
+    margin-bottom: 30px;
+}
+
+.input100::placeholder {
+    color: rgb(255, 255, 255);
+}
+
+.input100 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    color: #fff;
+    line-height: 1.2;
+    display: block;
+    width: 100%;
+    height: 45px;
+    background: transparent;
+    padding: 0 5px 0 15px;
+}
+
+input {
+    outline: none;
+    border: none;
+}
+
+button, input {
+    overflow: visible;
+}
+
+button, input, optgroup, select, textarea {
+    margin: 0;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+}
+
+.login100-form-btn:hover {
+    color: #fff;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+.login100-form-btn {
+    width: 40%;
+    height: 50px;
+    margin: 0 auto;
+    font-family: 'Poppins', sans-serif;
+    font-size: 26px;
+    letter-spacing: 5px;
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 20px;
+    border-radius: 25px;
+    background: rgb(45,194,253);
+    background: linear-gradient(180deg, rgba(45,194,253,1) 0%, rgb(63, 131, 255) 100%);
+    position: relative;
+    z-index: 1;
+    transition: all 0.4s;
+}
+
+button {
+    outline: none;
+    border: none;
+    background: transparent;
 }
