--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -323,9 +323,9 @@ input[type=checkbox] {
 /* shoe form */
 
 
-.shoe-container {
+.shoe-add-container {
     width: 50%;
-    margin: 150px auto;
+    margin: 180px auto;
     border: 1px solid lightgray;
     border-radius: 10px;
     overflow: hidden;
@@ -419,9 +419,14 @@ button:hover {
     border-radius: 25px;
     background: rgb(45,194,253);
     background: linear-gradient(180deg, rgba(45,194,253,1) 0%, rgb(63, 131, 255) 100%);
+    box-shadow: 0 0 10px 2px cyan;
     position: relative;
     z-index: 1;
     transition: all 0.4s;
+}
+
+.login100-form-btn:hover {
+    box-shadow: 0 0 30px 10px cyan;
 }
 
 button {
@@ -434,8 +439,19 @@ button {
 /* edit model */
 
 
-.shoe-container {
+.shoe-edit-container {
+    width: 50%;
+    margin: 0 auto;
+    margin-top: 135px;
     padding: 15px 55px 37px 55px;
+    border: 1px solid lightgray;
+    border-radius: 10px;
+    overflow: hidden;
+    background: #9152f8;
+    background: -webkit-linear-gradient(top, #7579ff, #b224ef);
+    background: -o-linear-gradient(top, #7579ff, #b224ef);
+    background: -moz-linear-gradient(top, #7579ff, #b224ef);
+    background: linear-gradient(top, #7579ff, #b224ef);
 }
 
 .model-edit-title {
@@ -461,7 +477,8 @@ button {
     margin: 10px auto;
     margin-bottom: 25px;
     font-family: 'Poppins', sans-serif;
-    font-size: 26px;
+    font-size: 22px;
+    font-weight: bold;
     border: 2px dashed white;
     background: rgb(75,198,255);
     background: linear-gradient(90deg, rgba(75,198,255,1) 0%, rgb(222, 166, 255) 50%, rgba(75,198,255,1) 100%);
@@ -470,6 +487,7 @@ button {
 .mid-content select option {
     font-family: 'Poppins', sans-serif;
     font-style: italic;
-    font-size: 20px;
+    font-size: 17px;
+    text-align: center;
     background-color: rgb(231, 190, 240);
 }
