--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -489,3 +489,35 @@ button {
     text-align: center;
     background-color: rgb(231, 190, 240);
 }
+
+
+/* user edit */
+
+.user-edit-container {
+    width: 50%;
+    margin: 0 auto;
+    margin-top: 135px;
+    padding: 15px 55px 37px 55px;
+    border: 1px solid lightgray;
+    border-radius: 10px;
+    overflow: hidden;
+    background: #9152f8;
+    background: -webkit-linear-gradient(top, #7579ff, #b224ef);
+    background: -o-linear-gradient(top, #7579ff, #b224ef);
+    background: -moz-linear-gradient(top, #7579ff, #b224ef);
+    background: linear-gradient(top, #7579ff, #b224ef);
+}
+
+.user-edit-title {
+    font-family: 'Poppins', sans-serif;
+    font-size: 48px;
+    /* margin-bottom: 25px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+
+input:focus {
+    opacity: 1;
+}
