--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -5,7 +5,7 @@ html {
 header {
     width: 100%;
     height: 110px;
-    background-color:rgb(133, 241, 241);
+    background-color:rgb(216, 167, 114);
     box-shadow: 0px 7px 10px 0 lightgray;
     display: flex;
     position: fixed;
@@ -91,7 +91,7 @@ footer {
     justify-content: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 24px;
-    background-color: rgb(133, 241, 241);
+    background-color: rgb(216, 167, 114);
 }
 
 
@@ -518,6 +518,40 @@ button {
     color: white;
 }
 
-input:focus {
-    opacity: 1;
+
+/* purchase */
+
+
+.purchase-container {
+    width: 50%;
+    height: 300px;
+    margin: 0 auto;
+    margin-top: 235px;
+    padding: 15px 55px 37px 55px;
+    border: 1px solid lightgray;
+    border-radius: 10px;
+    overflow: hidden;
+    background: #9152f8;
+    background: -webkit-linear-gradient(top, #7579ff, #b224ef);
+    background: -o-linear-gradient(top, #7579ff, #b224ef);
+    background: -moz-linear-gradient(top, #7579ff, #b224ef);
+    background: linear-gradient(top, #7579ff, #b224ef);
+}
+
+.purchase-title {
+    font-family: 'Poppins', sans-serif;
+    font-size: 48px;
+    margin-bottom: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+
+.purchase-container .mid-content .container-login100-form-btn {
+    margin-top: 25px;
+}
+
+.purchase-container .mid-content label {
+    margin-bottom: 20px
 }
