--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -14,7 +14,7 @@ header {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-a:not(.psw a) {
+a:not(.psw a, .dropdown-content a) {
     text-decoration: none; 
     color: black;
     background-image: linear-gradient(currentColor, currentColor);
@@ -41,7 +41,7 @@ a:hover:not(.logo-container a) {
 }
 
 header ul:not(.log-bar){
-    width: 60%;
+    width: 80%;
     display: flex;
     justify-content: flex-start;
     margin-top: 45px;
@@ -49,10 +49,46 @@ header ul:not(.log-bar){
 
 header ul li {
     list-style: none;
+    font-size: 20px;
+    text-align: center;
+    margin-left: 40px;
+}
+
+/* .dropdown {
+    position: relative;
+    display: none;
+}
+
+.dropbtn {
+    color: rgb(0, 0, 0);
     font-size: 22px;
     text-align: center;
     margin-left: 25px;
 }
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: rgba(211, 211, 211, 0.418);
+} */
+  
+/* .dropdown:hover .dropdown-content {
+    display: block;
+} */
 
 .log-bar {
     position: absolute;
@@ -554,4 +590,38 @@ button {
 
 .purchase-container .mid-content label {
     margin-bottom: 20px
+}
+
+
+/* admin panel */
+
+
+.role-container {
+    width: 50%;
+    height: 360px;
+    margin: 0 auto;
+    margin-top: 235px;
+    padding: 15px 55px 37px 55px;
+    border: 1px solid lightgray;
+    border-radius: 10px;
+    overflow: hidden;
+    background: #9152f8;
+    background: -webkit-linear-gradient(top, #7579ff, #b224ef);
+    background: -o-linear-gradient(top, #7579ff, #b224ef);
+    background: -moz-linear-gradient(top, #7579ff, #b224ef);
+    background: linear-gradient(top, #7579ff, #b224ef);
+}
+
+.role-title {
+    font-family: 'Poppins', sans-serif;
+    font-size: 48px;
+    margin-bottom: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+
+#list-roles {
+    margin: 30px auto;
 }
