--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -635,22 +635,23 @@ button {
     width: 80%;
     height: auto;
     margin: 0 auto;
-    padding: 15px 55px 37px 55px;
+    padding: 15px 55px 15px 55px;
     border: 1px solid lightgray;
     border-radius: 10px;
     overflow: hidden;
-    margin-top: 150px;
+    margin-top: 140px;
+    transition: ease all 0.3s;
 }
 
 #allGainBtn {
-    width: 35%;
+    width: 45%;
     font-family: 'Molot' sans-serif;
     font-size: 26px;
     font-weight: bold;
     margin: 0 auto;
     margin-top: 20px;
     height: 40px;
-    background-color: rgb(0, 255, 221);
+    background-color: rgb(255, 218, 170);
     box-shadow: 0 0 15px 1px rgba(0, 153, 255, 0.685);
     padding: 25px;
     border-radius: 50px;
@@ -665,19 +666,31 @@ button {
 }
 
 #collapseExample {
-    display: flex;
+    /* display: none; */
+    height: 0;
+    opacity: 0;
+    transition: ease all 0.3s;
+    transform: translateY(-80%);
     justify-content: center;
     align-items: center;
 }
 
 #allGainTxt {
-    transition: ease all 0.3s;
-    transform: translateY(-180%);
-    opacity: 0;
     font-family: 'Molot' sans-serif;
-    font-size: 30px;
-    font-style: italic;
+    font-size: 40px;
     font-weight: bold;
+    text-align: center;
+    transition: ease all 0.3s;
+    transform: translateY(-80%);
+    opacity: 0;
+}
+
+.gain-container h3 {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: center;
+    font-size: 22px;
+    font-weight: bold;
+    margin-bottom: 40px;
 }
 
 .allGainContainers {
@@ -686,14 +699,42 @@ button {
     align-items: center;
 }
 
+#gainForNovember {
+    margin-bottom: 50px;
+}
+
+#gainForFebruary {
+    margin-bottom: 50px;
+}
+
+.list-group-item-warning {
+    background-color: rgb(255, 207, 161);
+}
+.list-group-item-info {
+    background-color: rgb(167, 255, 182);
+}
+.list-group-item-primary {
+    background-color: rgb(163, 206, 255);
+}
+.list-group-item-danger {
+    background-color: rgb(255, 161, 161);
+}
+
 .list-group-item {
     width: 90%;
     height: 20px;
     padding: 15px;
-    margin-bottom: 15px;
-    background-color: lightgreen;
+    margin-bottom: 5px;
+    opacity: 1;
+    border-radius: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    transition: ease all 0.2s;
+}
+
+.list-group-item:hover {
+    transform: scale(1.02);
+    opacity: 0.8;
 }
