--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -244,9 +244,14 @@ input[type=checkbox] {
 .registration-container {
     width: 45%;
     margin: 0px auto;
-    margin-top: 125px;
-    padding: 20px;
+    margin-top: 120px;
+    padding: 20px 20px;
     border: 3px solid #f1f1f1;
+    background: #9152f8;
+    background: -webkit-linear-gradient(top, #7579ff, #b224ef);
+    background: -o-linear-gradient(top, #7579ff, #b224ef);
+    background: -moz-linear-gradient(top, #7579ff, #b224ef);
+    background: linear-gradient(top, #7579ff, #b224ef);
     transition: ease all .3s;
 }
 .registration-container:hover {
@@ -255,11 +260,11 @@ input[type=checkbox] {
 .registration-heading {
     height: 100px;
     margin-bottom: 15px;
-    border-radius: 10px;
+    border-radius: 5px;
     border-right: 1px solid black;
     border-bottom: 1px solid black;
     background: rgb(176, 142, 255);
-    background: radial-gradient(circle, rgb(61, 158, 255) 55%, rgb(255, 254, 171) 100%);
+    background: radial-gradient(circle, rgb(255, 151, 238) 55%, rgb(221, 209, 255) 100%);
     text-align: center;
     display: flex;
     justify-content: center;
@@ -270,7 +275,7 @@ input[type=checkbox] {
     box-shadow: 0 0 20px 5px rgb(184, 184, 184);
 }
 .registration-heading h2 {
-    color: rgb(179, 255, 0);
+    color: rgb(0, 0, 0);
     text-shadow:
         -1px -1px 1px white,  
         1px -1px 1px white,
@@ -283,12 +288,13 @@ input[type=checkbox] {
     text-transform: uppercase;
     font-style: italic;
     letter-spacing: 0.05em;
+    line-height: 50px;
     display: flex;
     justify-content: center;
 }
 .registration-heading h2:before {
     position: absolute;
-    left: 0;
+    left: 200px;
     top: 0;
     content: attr(filter-content);
     filter: url(#motion-blur-filter);
@@ -302,17 +308,13 @@ input[type=checkbox] {
     margin-bottom: 15px;
 }
 .input-container .input-field {
-    width: 85.1%;
-    margin: 0px auto;
-    padding: 15px;
-    margin-left: 22px;
-    outline: none;
-}
-.input-container .input-field {
     font-size: 20px;
 }
-.input-field:focus {
-    border: 2px solid rgb(72, 163, 255);
+.input-container .input-field::placeholder {
+    color: white;
+}
+.registration-container .input-container {
+    margin-bottom: 0;
 }
 #register {
     width: 98%;
@@ -341,8 +343,11 @@ input[type=checkbox] {
 .input-container .input-img {
     width: 45px;
     height: 45px;
+    border-radius: 50%;
     margin-top: 2px;
     padding: 3px;
+    margin: 10px 10px;
+    margin-right: 30px;
     box-shadow: 0px 0px 10px 3px lightgray;
 }
 
@@ -467,7 +472,7 @@ button {
 .model-edit-title {
     font-family: 'Poppins', sans-serif;
     font-size: 48px;
-    /* margin-bottom: 25px; */
+    margin-bottom: 25px;
     display: flex;
     justify-content: center;
     align-items: center;
