--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -422,6 +422,10 @@ button, input, optgroup, select, textarea {
 button:hover {
     cursor: pointer;
 }
+.shoe-add-container .mid-content .container-login100-form-btn {
+    margin-top: 60px;
+    display: flex;
+}
 .login100-form-btn {
     width: 40%;
     height: 50px;
@@ -442,8 +446,31 @@ button:hover {
     z-index: 1;
     transition: all 0.4s;
 }
+.file-form-btn {
+    width: 40%;
+    height: 50px;
+    margin: 0 auto;
+    font-family: 'Poppins', sans-serif;
+    font-size: 26px;
+    letter-spacing: 5px;
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 20px;
+    border-radius: 25px;
+    background: rgb(141, 141, 141);
+    background: linear-gradient(180deg, rgb(143, 143, 143) 0%, rgb(126, 126, 126) 100%);
+    box-shadow: 0 0 10px 2px rgb(73, 73, 73);
+    position: relative;
+    z-index: 1;
+    transition: all 0.4s;
+}
 .login100-form-btn:hover {
     box-shadow: 0 0 30px 10px cyan;
+}
+.file-form-btn:hover {
+    box-shadow: 0 0 30px 10px rgb(73, 73, 73);
 }
 button {
     outline: none;
@@ -765,9 +792,9 @@ button {
 
 #upload-content {
     width: 35%;
-    height: auto;
+    height: 600px;
     margin: 0 auto;
-    margin-top: 170px;
+    margin-top: 130px;
     border: 1px solid lightgray;
     border-radius: 10px;
     overflow: hidden;
@@ -818,8 +845,8 @@ button {
     transform: scale(1.02);
 }
 #upload-content .mid-content {
-    height: 520px;
-    border:thin solid black;
+    height: 610px;
+    padding-bottom: 20px;
 }
 #upload-content .mid-content label:not(.download-img) {
     width: 60%;
@@ -855,15 +882,49 @@ button {
 .selected-file {
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    margin-top: 60px;
+    margin-top: 12px;
 }
 #imageName {
+    display: none;
     width: 55%;
-    padding: 15px;
+    padding: 6px;
+    border-radius: 5px;
+    border: 1px solid gray;
+    font-size: 18px;
+}
+#imagePathName {
+    display: none;
+    margin-top: 7px;
+    width: 55%;
+    padding: 6px;
     border-radius: 5px;
     border: 1px solid gray;
     font-style: italic;
     font-size: 18px;
+}
+.add-file-container {
+    width: 100%;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#submit-file {
+    width: 40%;
+    height: 40px;
+    margin-top: 20px;
+    border-radius: 10px;
+    font-size: 20px;
+    background-color: rgb(149, 255, 255);
+    opacity: 0.7;
+    border: 1px solid gray;
+    transition: ease all .2s;
+}
+#submit-file:hover {
+    transform: scale(1.03);
+    opacity: 1;
+    background-color: rgb(137, 255, 255)
 }
