Делать форму была плохая идея :) По новой миха.

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -921,7 +921,7 @@ button {
     align-items: center;
     margin-top: 12px;
 }
-#imageName {
+#description {
     display: none;
     width: 55%;
     padding: 6px;
